<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/icons8__48"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="144dp"
        android:layout_marginHorizontal="37dp"
        android:background="#EDEEF0"
        android:hint="@string/email"
        android:textColor="#626D7A"
        android:paddingTop="5dp"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDEEF0"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="37dp"
        android:hint="@string/password"
        android:textColor="#626D7A" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="37dp"
        android:backgroundTint="#2A5885"
        android:text="@string/tocomein"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/facebook"
        android:textColor="@color/black" />


</LinearLayout>