<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/orig" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/id"
            android:textSize="22sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:text="@string/id1"
            android:layout_marginStart="37dp"
            android:textColor="#999999" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="37dp"
            android:backgroundTint="#999999"
            android:hint="@string/pochta"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/notrem"
            android:textColor="#000080"
            android:layout_marginStart="37dp"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="37dp"
            android:backgroundTint="#FFCC00"
            android:text="@string/tocomein"
            android:textColor="@color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="37dp"
            android:backgroundTint="@color/white"
            android:text="@string/createid"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tocomeinwith"
            android:textColor="#333333"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="3">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:src="@drawable/icons8__48"
            android:onClick="vk" />
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:src="@drawable/icons8_facebook__48" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:src="@drawable/icons8_google_48" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/id2"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/lmore"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>